--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,24 @@
 
 
 
+<!-- JOURNAL -->
+
+
+<div class="journalDiv container-fluid">
+  <div class="row">
+    <div class="col-lg-6 journal-style">
+      <p class="journalBody">Feeling frustrated? Vent your thoughts out anonymously in our Journal!</p>
+      <a class="journalLink"href="/compose">Write</a>
+    </div>
+    <div class="col-lg-6 journal-style">
+      <!-- <img class="readGif"src="https://i.giphy.com/media/12qxR8tbj3qvq23V7z/giphy360p.mp4" alt=""> -->
+      <p class="journalBody">Feeling isolated? Join others at our MindSpace Community.</p>
+        <a class="journalLink"href="/home">Read</a>
+    </div>
+  </div>
+</div>
+
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -88,6 +106,12 @@
 
 
 <script src="https://kit.fontawesome.com/4407f986e6.js" crossorigin="anonymous"></script>
+
+
+<footer>
+
+
+</footer>
 
 
 </body>
