--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
 
-
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
 
 
 
@@ -44,7 +44,7 @@
             </a>
         </li>
         <li class="navItems">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="#composejournal">
                 COMPOSE
             </a>
         </li>
@@ -84,7 +84,7 @@
 <!-- JOURNAL -->
 
 
-<div class="journalDiv container-fluid">
+<div id="composejournal" class="journalDiv container-fluid">
   <div class="row">
     <div class="col-lg-6 journal-style">
       <p class="journalBody">Feeling frustrated? Vent your thoughts out anonymously in our Journal!</p>
@@ -99,6 +99,20 @@
 </div>
 
 
+<div class="newsletterSignup text-center">
+<p class="newsletterBody">For more such Stories, Advancement in the field of Mental Wellness...</p>
+<form action="/" class="form-signin" method="post">
+  <img class="mb-4" src="images/news-letter.png" alt="" width="100" height="100">
+  <h1 class="h3 mb-3 font-weight-normal">Signup to Our Newsletter!</h1>
+
+  <input type="text" name="firstName" class="form-control top" placeholder="First Name" required autofocus>
+  <input type="text" name="lastName" class="form-control middle" placeholder="Last Name" required>
+  <input type="email" name="emailadd" class="form-control bottom" placeholder="Email" required>
+  <button class="btn btn-lg btn-dark btn-block" type="submit">Sign Me Up!</button>
+</form>
+</div>
+
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -107,11 +121,16 @@
 
 <script src="https://kit.fontawesome.com/4407f986e6.js" crossorigin="anonymous"></script>
 
+<div class="container-fluid footer">
 
-<footer>
+  <footer>
+  <p class="copyrightText">MindSpace © Rumble 2022</p>
+  <a class="contacts" href="#"><i class="fa-brands fa-facebook"></i></a>
+  <a class="contacts"href="#"><i class="fa-brands fa-instagram"></i></a>
+  <a class="contacts"href="#"><i class="fa-brands fa-twitter"></i></a>
+  </footer>
+</div>
 
-
-</footer>
 
 
 </body>
