--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,12 @@
     <div class="collapse navbar-collapse" id="#navbarTogglerDemo01">
     <ul class="navbar-nav ml-auto">
         <li class="navItems">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="/about">
                 ABOUT
             </a>
         </li>
         <li class="navItems">
-            <a class="nav-link" href="">
+            <a class="nav-link" href="/contact">
                 CONTACT
             </a>
         </li>
